tests/ui/suggestions/apitit-unimplemented-method.stderr
error[E0046]: not all trait items implemented, missing: `foo`, `bar`
  --> $DIR/apitit-unimplemented-method.rs:7:1
   |
LL | impl Trait for Local {}
   | ^^^^^^^^^^^^^^^^^^^^ missing `foo`, `bar` in implementation
   |
   = help: implement the missing item: `fn foo(_: impl Sized) { todo!() }`
   = help: implement the missing item: `fn bar<T>(_: impl Sized) { todo!() }`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
